; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/panel/extr_panel-seiko-43wvf1g.c_seiko_panel_unprepare.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/panel/extr_panel-seiko-43wvf1g.c_seiko_panel_unprepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_panel = type { i32 }
%struct.seiko_panel = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_panel*)* @seiko_panel_unprepare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @seiko_panel_unprepare(%struct.drm_panel* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.drm_panel*, align 8
  %4 = alloca %struct.seiko_panel*, align 8
  store %struct.drm_panel* %0, %struct.drm_panel** %3, align 8
  %5 = load %struct.drm_panel*, %struct.drm_panel** %3, align 8
  %6 = call %struct.seiko_panel* @to_seiko_panel(%struct.drm_panel* %5)
  store %struct.seiko_panel* %6, %struct.seiko_panel** %4, align 8
  %7 = load %struct.seiko_panel*, %struct.seiko_panel** %4, align 8
  %8 = getelementptr inbounds %struct.seiko_panel, %struct.seiko_panel* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

12:                                               ; preds = %1
  %13 = load %struct.seiko_panel*, %struct.seiko_panel** %4, align 8
  %14 = getelementptr inbounds %struct.seiko_panel, %struct.seiko_panel* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @regulator_disable(i32 %15)
  %17 = call i32 @msleep(i32 100)
  %18 = load %struct.seiko_panel*, %struct.seiko_panel** %4, align 8
  %19 = getelementptr inbounds %struct.seiko_panel, %struct.seiko_panel* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @regulator_disable(i32 %20)
  %22 = load %struct.seiko_panel*, %struct.seiko_panel** %4, align 8
  %23 = getelementptr inbounds %struct.seiko_panel, %struct.seiko_panel* %22, i32 0, i32 0
  store i32 0, i32* %23, align 4
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %12, %11
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local %struct.seiko_panel* @to_seiko_panel(%struct.drm_panel*) #1

declare dso_local i32 @regulator_disable(i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
